# scopebase

./: .env.example  .env.production.example  .gitignore  README.md  design-qa.md  docker-compose.production.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 94e972cee453_initial_schema.py
backend/app/: main.py  models.py  seed.py
backend/app/activity/: models.py  router.py  schemas.py  service.py
backend/app/approvals/: models.py
backend/app/auth/: dependencies.py  models.py  router.py  schemas.py
backend/app/billing/: models.py  provider.py  router.py  schemas.py
backend/app/briefs/: models.py  router.py  schemas.py
backend/app/change_requests/: models.py  router.py  schemas.py
backend/app/common/: config.py  database.py  enums.py  exceptions.py  link_schemas.py  middleware.py  models.py  public_link_service.py  public_links.py  rate_limit.py  schemas.py  security.py  slug.py
backend/app/email/: provider.py
backend/app/files/: models.py  router.py  schemas.py  storage.py
backend/app/organizations/: models.py  router.py  schemas.py
backend/app/projects/: dependencies.py  models.py  router.py  schemas.py
backend/app/scopes/: models.py  pdf.py  router.py  schemas.py
backend/app/users/: models.py
backend/tests/: conftest.py  helpers.py  test_auth.py  test_authorization.py  test_billing.py  test_brief_flow.py  test_change_requests.py  test_config.py  test_scope_flow.py  test_storage.py
design-export/: README.md  index.html  styles.css
docs/: ARCHITECTURE.md  (+2 more)
(+62 files in other folders)
