[project]
name = "scopebase-api"
version = "0.1.0"
description = "ScopeBase application API"
requires-python = ">=3.12"
dependencies = [
  "aioboto3>=14.3.0,<15",
  "alembic>=1.16.0,<2",
  "asyncpg>=0.30.0,<1",
  "email-validator>=2.2.0,<3",
  "fastapi>=0.116.0,<1",
  "httpx>=0.28.0,<1",
  "jinja2>=3.1.0,<4",
  "orjson>=3.10.0,<4",
  "psycopg[binary]>=3.2.0,<4",
  "pydantic-settings>=2.10.0,<3",
  "pwdlib[argon2]>=0.2.1,<1",
  "pyjwt>=2.10.0,<3",
  "python-multipart>=0.0.20,<1",
  "reportlab>=4.4.0,<5",
  "sqlalchemy[asyncio]>=2.0.41,<3",
  "stripe>=12.2.0,<13",
  "uvicorn[standard]>=0.35.0,<1"
]

[dependency-groups]
dev = [
  "aiosqlite>=0.21.0,<1",
  "mypy>=1.16.0,<2",
  "pytest>=8.4.0,<9",
  "pytest-asyncio>=1.0.0,<2",
  "pytest-cov>=6.2.0,<7",
  "ruff>=0.12.0,<1"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
